package com.letsmidi.monsys.protocol.demo2;

// push-admin
enum MsgType {
  LOGIN = 1;
  LOGIN_RSP = 2;

  MSG = 3;
  MSG_RSP = 4;
}

message DemoMsg {
  required MsgType type2 = 1;
  required int32 seq2 = 2;

  optional LoginReq2 login_req2 = 10;
  optional LoginRsp2 login_rsp2 = 11;
  optional MsgReq2 msg_req2 = 12;
  optional MsgRsp2 msg_rsp2 = 13;
}

message LoginReq2 {
  required string id2 = 1;
}

message LoginRsp2 {
  required int32 code2 = 1;
}

message MsgReq2 {
  required string msg2 = 1;
  required string peerId2 = 2;
}

message MsgRsp2 {
  required int32 code2 = 1;
}



